# cachyOS-omarchy-hyprland-modificado

./: .gitignore  CHECKLIST.md  COMPARISON.md  README.md  install.sh
.config/alacritty/: alacritty.toml
.config/hypr/: autostart.conf  bindings.conf  fancyzones.json  monitors.conf
.config/opencode/: opencode.json
.local/lib/bash/: async.sh
.local/lib/hypr/: alttab_overlay.py  clip-lib.sh
rust/hypr-fancyzones/: Cargo.toml
rust/hypr-fancyzones/src/: main.rs
rust/hypr-winshot/: Cargo.toml
rust/hypr-winshot/protocols/: hyprland-toplevel-export-v1.xml
rust/hypr-winshot/src/: main.rs
